# airbinb-clone

./: .gitignore  README.md
airbnb-clone-backend/: db.sqlite3  pyproject.toml
airbnb-clone-backend/bookings/: admin.py  models.py
airbnb-clone-backend/bookings/migrations/: 0001_initial.py
airbnb-clone-backend/categories/: admin.py  models.py
airbnb-clone-backend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
airbnb-clone-backend/common/: models.py
airbnb-clone-backend/config/: settings.py
airbnb-clone-backend/direct_messages/: admin.py  apps.py  models.py
airbnb-clone-backend/direct_messages/migrations/: 0001_initial.py
airbnb-clone-backend/experiences/: admin.py  models.py
airbnb-clone-backend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_participation_explanation_and_more.py
airbnb-clone-backend/houses/: admin.py  models.py
airbnb-clone-backend/houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night.py  0003_house_pet_allowed.py  0004_house_last_modified_alter_house_pet_allowed_and_more.py  0005_remove_house_last_modified.py
airbnb-clone-backend/medias/: models.py
airbnb-clone-backend/medias/migrations/: 0001_initial.py
airbnb-clone-backend/reviews/: admin.py  models.py
airbnb-clone-backend/reviews/migrations/: 0001_initial.py
airbnb-clone-backend/rooms/: admin.py  models.py
airbnb-clone-backend/rooms/migrations/: 0001_initial.py  0003_alter_amenity_options.py  (+2 more)
airbnb-clone-backend/users/: admin.py  models.py
airbnb-clone-backend/wishlists/: admin.py  models.py
(+5 files in other folders)
